--- a/index.html
+++ b/index.html
@@ -11,65 +11,76 @@
     <header>
       <h1 class="text-6xl">BELONG TOGETHER</h1>
     </header>
-    <section>
-      <form id="myForm">
-        <div class="container">
-          <img
-            class="img-person"
-            src="img/img-person.jpg"
-            width="100"
-            height="100"
-            alt="ảnh bạn trai"
-          />
+    <section class="grid grid-cols-1 gap-8 sm:grid-cols-2 lg:grid-cols-3">
+      <!-- <form id="myForm"> -->
+      <!-- <div class="container"> -->
+      <img
+        class="img-person col-start-1 row-start-1"
+        src="img/img-person.jpg"
+        width="100"
+        height="auto"
+        alt="ảnh bạn trai"
+      />
 
-          <div id="input-container-1" class="info">
-            <p class="text-black text-[24px]">Họ và tên:</p>
-            <p id="input-name-person1" class="text-black text-[24px]">
-              Trần Trọng Tấn
-            </p>
-            <p class="text-black text-[24px]">Tuổi:</p>
-            <p id="input-age-person1" class="text-black text-[24px]">20</p>
-            <p class="text-black text-[24px]">Giới tính:</p>
-            <p id="input-sex-person1" class="text-black text-[24px]">Nam</p>
-          </div>
-        </div>
-        <div class="container">
-          <img id="imgTym" src="img/tym.png" class="img-tym" alt="" />
-          <p id="countingTime" class="text-blue-100 text-[64px]"></p>
-          <div class="date-start">
-            <span id="clock" class="text-red-600 text-[32px]"></span>
-            <span id="datePresent" class="text-red-600 text-[32px]"></span>
-          </div>
-          <button
-            id="myButton"
-            onclick="startTimer()"
-            class="border-4 border-blue-600 rounded-full bg-blue-600 text-white w-32 h-12"
-            type="button"
-          >
-            Bắt đầu
-          </button>
-        </div>
-        <div class="container">
-          <img
-            class="img-person"
-            src="img/img-person.jpg"
-            width="100"
-            height="100"
-            alt="ảnh bạn trai"
-          />
+      <div
+        id="input-container-1"
+        class="info col-start-1 row-start-2 justify-center items-center"
+      >
+        <p class="text-black text-[24px]">Họ và tên:</p>
+        <p id="input-name-person1" class="text-black text-[24px]">
+          Trần Trọng Tấn
+        </p>
+        <p class="text-black text-[24px]">Tuổi:</p>
+        <p id="input-age-person1" class="text-black text-[24px]">20</p>
+        <p class="text-black text-[24px]">Giới tính:</p>
+        <p id="input-sex-person1" class="text-black text-[24px]">Nam</p>
+      </div>
+      <!-- </div> -->
+      <!-- <div class="container"> -->
+      <img
+        id="imgTym"
+        src="img/tym.png"
+        class="img-tym col-start-2 row-start-1"
+        alt=""
+      />
+      <p
+        id="countingTime"
+        class="text-blue-100 text-[64px] col-start-2 row-start-1"
+      ></p>
+      <div class="date-start col-start-2 row-start-2">
+        <span id="clock" class="text-red-600 text-[32px]"></span>
+        <span id="datePresent" class="text-red-600 text-[32px]"></span>
+      </div>
+      <button
+        id="myButton"
+        onclick="startTimer()"
+        class="border-4 border-blue-600 rounded-full bg-blue-600 text-white w-32 h-12 col-start-2 row-start-2"
+        type="button"
+      >
+        Bắt đầu
+      </button>
+      <!-- </div> -->
+      <!-- <div class="container"> -->
+      <img
+        class="img-person col-start-3 row-start-1"
+        src="img/img-person.jpg"
+        width="100"
+        height="auto"
+        alt="ảnh bạn trai"
+      />
 
-          <div id="input-container-2" class="info">
-            <p class="text-black text-[24px]">Họ và tên:</p>
-            <p id="input-name-person2" class="text-black text-[24px]">
-              Nguyễn Trọng Nam
-            </p>
-            <p class="text-black text-[24px]">Tuổi:</p>
-            <p id="input-age-person2" class="text-black text-[24px]">20</p>
-            <p class="text-black text-[24px]">Giới tính:</p>
-            <p id="input-sex-person2" class="text-black text-[24px]">Nữ</p>
-          </div>
-        </div>
-      </form>
+      <div id="input-container-2" class="info justify-center items-center">
+        <p class="text-black text-[24px]">Họ và tên:</p>
+        <p id="input-name-person2" class="text-black text-[24px]">
+          Nguyễn Hồng Phúc
+        </p>
+        <p class="text-black text-[24px]">Tuổi:</p>
+        <p id="input-age-person2" class="text-black text-[24px]">20</p>
+        <p class="text-black text-[24px]">Giới tính:</p>
+        <p id="input-sex-person2" class="text-black text-[24px]">Nữ</p>
+      </div>
+      <!-- </div> -->
+      <!-- </form> -->
     </section>
 
     <footer></footer>
@@ -87,7 +98,7 @@
         startButton.remove();
       });
       function startCounting() {
-        setInterval(updateLove, 3000); //Em làm ở đây là 3 giây cập nhật 1 lần, còn nếu tính theo ngày
+        setInterval(updateLove, 5000); //Em làm ở đây là 3 giây cập nhật 1 lần, còn nếu tính theo ngày
       } //thì set 2000 thành 86400 giây
 
       function updateLove() {
